# webapp-made-in-dade

./: .env.example  .gitignore  AGENTS.md  README.md  dade.toml  package.json  pyproject.toml  setup.sh  start.sh  tailwind.config.js
apps/core/: context_processors.py  tests.py  urls.py  views.py
apps/core/templates/core/: home.html  htmx_demo.html
config/: urls.py
config/settings/: __init__.py  base.py  development.py  production.py
static/css/: input.css  main.css
templates/: _partial.html  base.html
templates/account/: logout.html
